--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -1,4 +1,4 @@
-<mat-accordion *ngIf="posts.length > 0">
+<mat-accordion *ngIf="posts?.length > 0">
     <mat-expansion-panel *ngFor="let post of posts">
         <mat-expansion-panel-header>
             {{post.title}}
@@ -13,4 +13,4 @@
 
 </mat-accordion>
 
-<p class="info-text mat-body-1" *ngIf="posts.length === 0">No posts added yet!</p>
+<p class="info-text mat-body-1" *ngIf="posts?.length === 0">No posts added yet!</p>
